Completes reuseable copy functions

--- a/newTestFolder/scss/styles.scss
+++ b/newTestFolder/scss/styles.scss
@@ -1,7 +1,6 @@
 @import "./views/test";
-@import "./views/card";
 /* HAL VIEWS STYLESHEET TAG */
 
 @import "./components/test";
 @import "./components/app";
-/* HAL COMPONENT STYLESHEET TAG */
+/* HAL COMPONENTS STYLESHEET TAG */
