Finishes basic style and component copying

--- a/newTestFolder/scss/styles.scss
+++ b/newTestFolder/scss/styles.scss
@@ -1,6 +1,7 @@
 @import "./views/test";
+@import "./views/testPrim";
 /* HAL VIEWS STYLESHEET TAG */
 
 @import "./components/test";
-@import "./components/app";
+@import "./components/newCard";
 /* HAL COMPONENTS STYLESHEET TAG */
