Removes stale code and organizes folder structure

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -2,4 +2,5 @@
 /* HAL VIEWS STYLESHEET TAG */
 
 @import "./components/test";
+@import "./components/newAppComp";
 /* HAL COMPONENTS STYLESHEET TAG */
