WIP Postinstall script
Writing to file with directory found via __dirname successful.

Still needs proper formatting and testing.

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -3,4 +3,5 @@
 
 @import "./components/test";
 @import "./components/newAppComp";
+@import "./components/newApp";
 /* HAL COMPONENTS STYLESHEET TAG */
