WIP Refactoring nav
Attempting to solve the multiple navType function issue.

Extracts some logic from libraryNav, and writes comments on the issue.

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -4,4 +4,6 @@
 @import "./components/test";
 @import "./components/newAppComp";
 @import "./components/newApp";
+@import "./components/test";
+@import "./components/myCard";
 /* HAL COMPONENTS STYLESHEET TAG */
