WIP Nav refactor
Creates new path building logic for nav commands.

Observes lexical scope for library and bundle nav operations.

Need to pass path into standard nav, and wrap bundle.

Need to build handler for dynamic prompts.

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -6,4 +6,8 @@
 @import "./components/newApp";
 @import "./components/test";
 @import "./components/myCard";
+@import "./components/doubleTest";
+@import "./components/thisCard";
+@import "./components/wtfApp";
+@import "./components/upApp";
 /* HAL COMPONENTS STYLESHEET TAG */
