WIP nav refactor - removes extra dynamicPrompt generators. Starts navHandler

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -10,4 +10,5 @@
 @import "./components/thisCard";
 @import "./components/wtfApp";
 @import "./components/upApp";
+@import "./components/myApp";
 /* HAL COMPONENTS STYLESHEET TAG */
