WIP Refactor of nav logic
Creates navHandler with normalized inputs.

Extracts remaining logic from existing nav function.

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -11,4 +11,5 @@
 @import "./components/wtfApp";
 @import "./components/upApp";
 @import "./components/myApp";
+@import "./components/testerApp";
 /* HAL COMPONENTS STYLESHEET TAG */
