WIP Refactor nav logic
Library nav working.

Bundle nav needs to reset to project root.

--- a/_testDirs/aNewTestFolder/scss/styles.scss
+++ b/_testDirs/aNewTestFolder/scss/styles.scss
@@ -12,4 +12,5 @@
 @import "./components/upApp";
 @import "./components/myApp";
 @import "./components/testerApp";
+@import "./components/thisTime";
 /* HAL COMPONENTS STYLESHEET TAG */
